--- a/Locker.csproj
+++ b/Locker.csproj
@@ -83,7 +83,9 @@
     <Compile Include="LockerStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Configuration\Configuration.cs" />
-    <Compile Include="Workers/Workers.cs" />
+    <Compile Include="Workers/ILockerLoaderFilesystem.cs" />
+    <Compile Include="Workers/IDataTypeSerializer.cs" />
+    <Compile Include="Workers/ILockerSaverFilesystem.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Library\Rocket.API.dll" />
@@ -95,7 +97,7 @@
     <Content Include="Library\YamlDotNet.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Configuration\ConfigDefaults.yml" />
+    <EmbeddedResource Include="Configuration\ConfigDefaults.yml" />
   </ItemGroup>
   
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
